tests/snapshots/output_yara_integration__yara_single_string.snap
---
source: tests/output_yara_integration.rs
expression: output
---
// YARA rule generated by Stringy
// Binary: single.exe
// Generated: 1768722692

rule single_exe_strings {
  meta:
    description = "Strings extracted from single.exe"
    generated_by = "stringy"
    generated_at = "1768722692"
  strings:
    // tag: Import
    // score: 0
    $Import_1 = "GetProcAddress" ascii
  condition:
    any of them
}
