tests/snapshots/output_yara_integration__yara_special_characters.snap
---
source: tests/output_yara_integration.rs
expression: output
---
// YARA rule generated by Stringy
// Binary: special.exe
// Generated: 1768722692

rule special_exe_strings {
  meta:
    description = "Strings extracted from special.exe"
    generated_by = "stringy"
    generated_at = "1768722692"
  strings:
    // tag: filepath
    // score: 10
    $filepath_1 = "quote\" backslash\\ line\n tab\t" ascii
  condition:
    any of them
}
