tests/snapshots/output_yara_integration__yara_unicode_in_strings.snap
---
source: tests/output_yara_integration.rs
expression: output
---
// YARA rule generated by Stringy
// Binary: unicode.exe
// Generated: 1768722692

rule unicode_exe_strings {
  meta:
    description = "Strings extracted from unicode.exe"
    generated_by = "stringy"
    generated_at = "1768722692"
  strings:
    // tag: Domain
    // score: 0
    $Domain_1 = "\xe4\xb8\xad\xe6\x96\x87\xe5\xad\x97\xe7\xac\xa6" ascii
  condition:
    any of them
}
